objects/RegulatoryTrxnFee.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Forward__c</fullName>
        <label>Balance-Forward</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConfirmationMessage__c</fullName>
        <label>ConfirmationMessage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationNumber__c</fullName>
        <label>Confirmation Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convenience_Fee__c</fullName>
        <label>Convenience Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <label>Due Amount</label>
        <summarizedField>RegulatoryTrxnFeeItem.FeeAmount</summarizedField>
        <summaryFilterItems>
            <field>RegulatoryTrxnFeeItem.Status__c</field>
            <operation>equals</operation>
            <value>Due, Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>RegulatoryTrxnFeeItem.RegulatoryTrxnFeeId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <summarizedField>RegulatoryTrxnFeeItem.FeeAmount</summarizedField>
        <summaryFilterItems>
            <field>RegulatoryTrxnFeeItem.Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>RegulatoryTrxnFeeItem.RegulatoryTrxnFeeId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due</fullName>
                    <default>true</default>
                    <label>Due</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Penalty__c</fullName>
        <formula>penalties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RCNum__c</fullName>
        <description>trying to pull the rc number from records where it&apos;s not present in the reports.</description>
        <formula>RC_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Date__c</fullName>
        <label>RC_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Number__c</fullName>
        <label>RC_Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_amount__c</fullName>
        <label>Refund_amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Account_Id__c</fullName>
        <label>Renewal Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspense_Amount__c</fullName>
        <label>Suspense_Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxamount__c</fullName>
        <label>Taxamount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Amount__c</fullName>
        <label>Transfer_Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>license_fee__c</fullName>
        <label>license_fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>penalties__c</fullName>
        <label>Penalties</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_RegulatoryTrxnFee</fullName>
        <columns>Name</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>Paid_Amount__c</columns>
        <columns>Paid_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Regulatory Transaction Fees</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>